package ca.mcmaster.se2aa4.island.team110;

public enum TileType {
    UNKNOWN,
    CREEK,
    EMERGENCY_SITE;
}